[package]
name = "ch3f-jordan"
version = "0.0.1"
authors = ["Carl Zhou <dev@carlzhou.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0.0"
env_logger = "0.7"
rusqlite = "0.23.1"


[lib]
name = "ch3f_utils"
path = "src/lib.rs"

[[bin]]
name = "ch3f_jordan"
path = "src/main.rs"